--- a/products/style.css
+++ b/products/style.css
@@ -7,9 +7,12 @@
 }
 
 body {
-  background: #000814;
-  color: white;
-  overflow-x: hidden;
+    padding: 0;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #001F3F, #003E7E, #007BFF);
+  min-height: 100vh;
+  color: #ffffff;
 }
 
 .navbar {
