--- a/profile/style.css
+++ b/profile/style.css
@@ -2,9 +2,8 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: Arial, sans-serif;
-  background: #000814;
-  min-height: 100vh;
+  font-family: "Poppins", sans-serif;              background: #0f172a:
+   color : white;
 }
 
 /* ===== PROFILE CONTAINER ===== */
