--- a/profile/style.css
+++ b/profile/style.css
@@ -2,8 +2,9 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif;              background: #0f172a:
-   color : white;
+  font-family: "Poppins", sans-serif;
+  background: #0f172a:
+  color : white;
 }
 
 /* ===== PROFILE CONTAINER ===== */
